# claude-pikabar

./: .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml
pikabar/: __init__.py  cli.py  delta.py  flavor.py  hp_bar.py  info_panel.py  palette.py  renderer.py  sprites.py  statusline.py
tests/: test_agent_teams.py  test_cli.py  test_delta.py  test_hp_bar.py  test_info_panel.py  test_palette.py  test_smoke.py  test_track_b.py
