[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-pikabar"
version = "0.3.2"
description = "Pokemon-style statusline for Claude Code — Pikachu reacts to your session"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Fioenix" }]
keywords = ["claude-code", "statusline", "pokemon", "terminal", "pixel-art"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/fioenix/claude-pikabar"
Repository = "https://github.com/fioenix/claude-pikabar"
Issues = "https://github.com/fioenix/claude-pikabar/issues"

[project.scripts]
pikabar = "pikabar.cli:main"

[tool.setuptools.packages.find]
include = ["pikabar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
